Opened 13 years ago

Closed 13 years ago

#3266 closed defect (fixed)

FFPlay don't want to play BIK file (the screen is all green)

Reported by: Vika Apelsinova Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: bink
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

FFPlay don't want to play BIK file from NecroVisioN video game. Bink Video Player (RAD Video Tools) plays it successfully.

RAD Video Tools log for necrovision_credits.bik:

Width: 498
Height 339
Frames: 189
Color depth: 32
Alpha plane: No.
Frames per second: 25.00
Milliseconds perframe: 40.00
Total time: 0 minutes 7 seconds
Total size: 3.106.336
Average data rate: 410.891
Average frame size: 16,435
File type: Color
Uses old y-cr-cb colorspace.
Video slices (max simultaneous CPUs): 2
Largest frame size: 90672
Highest one second data rate: 858968
Highest one second data rate start frame: 119

ffmpeg -v 9 -loglevel 99 -i necrovision_credits.bik

ffmpeg version N-59488-g8a1714a Copyright (c) 2000-2014 the FFmpeg developers
  built on Jan  2 2014 22:07:17 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      52. 59.100 / 52. 59.100
  libavcodec     55. 47.100 / 55. 47.100
  libavformat    55. 22.102 / 55. 22.102
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     4.  0.103 /  4.  0.103
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
Splitting the commandline.
Reading option '-v' ... matched as option 'v' (set logging level) with argument
'9'.
Reading option '-loglevel' ... matched as option 'loglevel' (set logging level)
with argument '99'.
Reading option '-i' ... matched as input file with argument 'necrovision_c
redits.bik'.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option v (set logging level) with argument 9.
Successfully parsed a group of options.
Parsing a group of options: input file necrovision_credits.bik.
Successfully parsed a group of options.
Opening an input file: necrovision_credits.bik.
[bink @ 00000000003f6b00] Format bink probed with size=2048 and score=100
[bink @ 00000000003f6b00] Before avformat_find_stream_info() pos: 804 bytes read
:32768 seeks:0
[bink @ 00000000003f6b00] All info found
[bink @ 00000000003f6b00] After avformat_find_stream_info() pos: 1340 bytes read
:32768 seeks:0 frames:1
Input #0, bink, from 'necrovision_credits.bik':
  Duration: 00:00:07.56, start: 0.000000, bitrate: 3287 kb/s
    Stream #0:0, 1, 1/25: Video: binkvideo (BIKi / 0x694B4942), yuv420p, 498x339
, 1/25, 25 fps, 25 tbr, 25 tbn, 25 tbc
Successfully opened the file.
At least one output file must be specified
[AVIOContext @ 00000000003f71a0] Statistics: 32768 bytes read, 0 seeks

ffplay -i necrovision_credits.bik

ffplay version N-59488-g8a1714a Copyright (c) 2003-2014 the FFmpeg developers
  built on Jan  2 2014 22:07:17 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      52. 59.100 / 52. 59.100
  libavcodec     55. 47.100 / 55. 47.100
  libavformat    55. 22.102 / 55. 22.102
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     4.  0.103 /  4.  0.103
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
Input #0, bink, from 'necrovision_credits.bik':    0B f=0/0
  Duration: 00:00:07.56, start: 0.000000, bitrate: 3287 kb/s
    Stream #0:0: Video: binkvideo (BIKi / 0x694B4942), yuv420p, 498x339, 25 fps,
 25 tbr, 25 tbn, 25 tbc
[binkvideo @ 0000000000359340] DC value went out of bounds: -33127
[binkvideo @ 0000000000359340] DC value went out of bounds: 35133
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 0
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 4
[binkvideo @ 0000000000359340] DC value went out of bounds: 46441
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 0
[binkvideo @ 0000000000359340] Run went out of bounds
    Last message repeated 1 times
[binkvideo @ 0000000000359340] DC value went out of bounds: 33506
[binkvideo @ 0000000000359340] Copy out of bounds @52, -1
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 7
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 1
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 4
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 4 f=0/0
[binkvideo @ 0000000000359340] Unknown block type 11
[binkvideo @ 0000000000359340] Run went out of bounds
[binkvideo @ 0000000000359340] Copy out of bounds @12, -2
[binkvideo @ 0000000000359340] Unknown block type 10
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 0
[binkvideo @ 0000000000359340] DC value went out of bounds: 34285
[binkvideo @ 0000000000359340] DC value went out of bounds: 34209
[binkvideo @ 0000000000359340] DC value went out of bounds: 35054
[binkvideo @ 0000000000359340] DC value went out of bounds: -32814
[binkvideo @ 0000000000359340] Run went out of bounds
[binkvideo @ 0000000000359340] DC value went out of bounds: 38254
[binkvideo @ 0000000000359340] DC value went out of bounds: -40271
[binkvideo @ 0000000000359340] Run went out of bounds
    Last message repeated 1 times
[binkvideo @ 0000000000359340] Unknown block type 14
[binkvideo @ 0000000000359340] DC value went out of bounds: -33541
[binkvideo @ 0000000000359340] Copy out of bounds @152, -11
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 0
[binkvideo @ 0000000000359340] DC value went out of bounds: 34310
[binkvideo @ 0000000000359340] Unknown block type 10
[binkvideo @ 0000000000359340] DC value went out of bounds: -41347
[binkvideo @ 0000000000359340] DC value went out of bounds: 44032
[binkvideo @ 0000000000359340] Copy out of bounds @9, -6
[binkvideo @ 0000000000359340] DC value went out of bounds: -45232
[binkvideo @ 0000000000359340] DC value went out of bounds: -62406
[binkvideo @ 0000000000359340] DC value went out of bounds: 34893
[binkvideo @ 0000000000359340] Copy out of bounds @11, -2
[binkvideo @ 0000000000359340] DC value went out of bounds: 38003
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 0
[binkvideo @ 0000000000359340] DC value went out of bounds: 32992
[binkvideo @ 0000000000359340] Incorrect 16x16 block type 4
    Last message repeated 2 times
[binkvideo @ 0000000000359340] Copy out of bounds @481, -2
[binkvideo @ 0000000000359340] Copy out of bounds @57, -70B f=0/0
[binkvideo @ 0000000000359340] DC value went out of bounds: 34231
[binkvideo @ 0000000000359340] Run went out of bounds
[binkvideo @ 0000000000359340] Unknown block type 10
    Last message repeated 1 times
[binkvideo @ 0000000000359340] Copy out of bounds @21, -11B f=0/0
[binkvideo @ 0000000000359340] Copy out of bounds @8, -2
[binkvideo @ 0000000000359340] Run went out of bounds
[binkvideo @ 0000000000359340] DC value went out of bounds: 36326
[binkvideo @ 0000000000359340] DC value went out of bounds: 35055
[binkvideo @ 0000000000359340] Unknown block type 10
[binkvideo @ 0000000000359340] Run went out of bounds
[binkvideo @ 0000000000359340] DC value went out of bounds: 41095
[binkvideo @ 0000000000359340] DC value went out of bounds: 37250
[binkvideo @ 0000000000359340] DC value went out of bounds: 41721
[binkvideo @ 0000000000359340] Copy out of bounds @126, -10
[binkvideo @ 0000000000359340] DC value went out of bounds: 38387
[binkvideo @ 0000000000359340] DC value went out of bounds: 35543
[binkvideo @ 0000000000359340] DC value went out of bounds: 34332
[binkvideo @ 0000000000359340] DC value went out of bounds: -44734
[binkvideo @ 0000000000359340] Copy out of bounds @22, -3
[binkvideo @ 0000000000359340] Copy out of bounds @39, -11
[binkvideo @ 0000000000359340] DC value went out of bounds: -36599
[binkvideo @ 0000000000359340] DC value went out of bounds: 35079
[binkvideo @ 0000000000359340] DC value went out of bounds: 38935
[binkvideo @ 0000000000359340] DC value went out of bounds: 35066
[binkvideo @ 0000000000359340] DC value went out of bounds: 47818
[binkvideo @ 0000000000359340] DC value went out of bounds: -47861
[binkvideo @ 0000000000359340] DC value went out of bounds: -37777
[binkvideo @ 0000000000359340] DC value went out of bounds: -38403
[binkvideo @ 0000000000359340] DC value went out of bounds: 39441
[binkvideo @ 0000000000359340] DC value went out of bounds: 53898
[binkvideo @ 0000000000359340] DC value went out of bounds: -42277
[binkvideo @ 0000000000359340] DC value went out of bounds: 35436
[binkvideo @ 0000000000359340] DC value went out of bounds: -33709
[binkvideo @ 0000000000359340] DC value went out of bounds: 33590
[binkvideo @ 0000000000359340] DC value went out of bounds: 49580
[binkvideo @ 0000000000359340] DC value went out of bounds: -39826
[binkvideo @ 0000000000359340] DC value went out of bounds: -46390
[binkvideo @ 0000000000359340] DC value went out of bounds: 40082
[binkvideo @ 0000000000359340] DC value went out of bounds: -50300
[binkvideo @ 0000000000359340] DC value went out of bounds: 48006
[binkvideo @ 0000000000359340] DC value went out of bounds: -57862
[binkvideo @ 0000000000359340] DC value went out of bounds: -54062
[binkvideo @ 0000000000359340] DC value went out of bounds: -34675
[binkvideo @ 0000000000359340] DC value went out of bounds: 61268

You can download necrovision_credits.bik file for future analysis here: http://goo.gl/5ZaZWB (direct link provided by Google Drive Hosting, TLS 1.2).

File name: necrovision_credits.bik
Size: 3 106 336 bytes
SHA-1: C056E84FEB2D402525B728FAEDD74836812BB483
MD5: E38D3F2A15FC97551495CBE4A0857991

Change History (2)

comment:1 by Carl Eugen Hoyos, 13 years ago

Keywords: bink added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavformat
Resolution: fixed
Status: openclosed

Fixed by Peter Ross in 0588acaf

Note: See TracTickets for help on using tickets.